# amari-project-boilerplate

./: .gitignore  Dockerfile  requirements.txt
app/: pyproject.toml
app/api/: routes.py
app/core/: config.py
app/services/: document_processor.py  llm_service.py
app/utils/: pdf_utils.py  xlsx_utils.py
tests/: test_llm_service.py  test_xlsx_utils.py
